<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="320dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/c1"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

        <ImageView
            android:id="@+id/c2"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

        <ImageView
            android:id="@+id/c3"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

        <ImageView
            android:id="@+id/c4"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

        <ImageView
            android:id="@+id/c5"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

        <ImageView
            android:id="@+id/c6"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

        <ImageView
            android:id="@+id/c7"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

        <ImageView
            android:id="@+id/c8"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

        <ImageView
            android:id="@+id/c9"
            android:layout_width="125dp"
            android:layout_height="126dp"
            android:onClick="toqueCasilla"
            android:src="@drawable/casilla"
            app:srcCompat="@drawable/casilla"
            tools:srcCompat="@drawable/casilla" />

    </GridLayout>

    <Button
        android:id="@+id/unjugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:onClick="Jugar"
        android:text="@string/button_1player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dosjugadores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="92dp"
        android:layout_toRightOf="@id/unjugador"
        android:onClick="Jugar"
        android:text="@string/button_2player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:text="TresEnRaya"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/grupoDificultad"
        android:layout_width="295dp"
        android:layout_height="140dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/facil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_easy" />

        <RadioButton
            android:id="@+id/dificil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_hard" />

        <RadioButton
            android:id="@+id/imposible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_extreme" />
    </RadioGroup>

    <Button
        android:id="@+id/btnPartidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="24dp"
        android:onClick="irUsuarios"
        android:text="@string/button_matches"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:onClick="irRanking"
        android:text="@string/button_ranking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPartidas" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:src="@android:drawable/ic_btn_speak_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gridLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />

</androidx.constraintlayout.widget.ConstraintLayout>
